@@ -37,7 +37,7 @@ public class GeneratorFormatTxt implements GeneratorFormat {
         data.stream()
                 .collect(Collectors.groupingBy(EventDto::dateEvent))
                 .values()
-                .stream().sorted(Comparator.comparing(l -> l.getFirst().dateEvent()))
+                .stream().sorted(Comparator.comparing(l -> l.get(0).dateEvent()))
                 .forEach(listDay -> reportSb.append("-----------------\n").append(buildDaysData(listDay)));
 
         return reportSb.toString();
@@ -45,7 +45,7 @@ public class GeneratorFormatTxt implements GeneratorFormat {
 
     private StringBuilder buildDaysData(List<EventDto> dataDay) {
         var reportSb = new StringBuilder();
-        var title = buildDayTitle(dataDay.getFirst().dateEvent());
+        var title = buildDayTitle(dataDay.get(0).dateEvent());
         reportSb.append(title)
                 .append(String.format("запланировано %d.\n", dataDay.size()));
         dataDay.forEach(event -> reportSb.append(buildEventDescription(event)));
